@@ -35,6 +35,7 @@ import java.nio.ByteBuffer;
 import java.nio.channels.Channels;
 import java.nio.channels.FileChannel;
 import java.nio.channels.SeekableByteChannel;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.FileStore;
@@ -56,8 +57,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
@@ -118,7 +117,7 @@ public class ZipFSTester {
     @Test
     void test0() throws Exception {
         List<String> list = new LinkedList<>();
-        try (var fs = newZipFileSystem(jarFile, Map.of());
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of());
              ZipFile zf = new ZipFile(fs.toString())) {
             Enumeration<? extends ZipEntry> zes = zf.entries();
             while (zes.hasMoreElements()) {
@@ -147,10 +146,8 @@ public class ZipFSTester {
 
         // clone a fs from fs0 and test on it
         Path tmpfsPath = getTempPath();
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-        try (var fs = newZipFileSystem(jarFile, Map.of());
-             FileSystem copy = newZipFileSystem(tmpfsPath, env)) {
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of());
+             FileSystem copy = FileSystems.newFileSystem(tmpfsPath, Map.of("create", "true"))) {
             z2zcopy(fs, copy, "/", 0);
 
             // copy the test jar itself in
@@ -161,19 +158,20 @@ public class ZipFSTester {
             }
         }
 
-        try (FileSystem fs = newZipFileSystem(tmpfsPath, new HashMap<String, Object>())) {
+        try (FileSystem fs = FileSystems.newFileSystem(
+                             new URI("jar", tmpfsPath.toUri().toString(), null), Map.of())) {
 
             FileSystemProvider provider = fs.provider();
             // newFileSystem(path...) should not throw exception
-            try (FileSystem fsPath = provider.newFileSystem(tmpfsPath, new HashMap<String, Object>())){}
+            try (FileSystem fsPath = provider.newFileSystem(tmpfsPath, Map.of())){}
             assertThrows(FileSystemAlreadyExistsException.class,
                     () -> provider.newFileSystem(new URI("jar", tmpfsPath.toUri().toString(), null),
-                    new HashMap<>()), "newFileSystem(URI...) does not throw exception");
+                    Map.of()), "newFileSystem(URI...) does not throw exception");
             assertThrows(UnsupportedOperationException.class,
                     () -> provider.newFileSystem(new File(System.getProperty("test.src", ".")).toPath(),
-                    new HashMap<>()), "newFileSystem() opens a directory as zipfs");
+                    Map.of()), "newFileSystem() opens a directory as zipfs");
             assertThrows(UnsupportedOperationException.class,
-                    () -> provider.newFileSystem(src, new HashMap<String, Object>()),
+                    () -> provider.newFileSystem(src, Map.of()),
                     "newFileSystem() opens a non-zip file as zipfs");
 
             // walk
@@ -276,94 +274,80 @@ public class ZipFSTester {
         Path fs3Path = getTempPath();
 
         // create a new filesystem, copy everything from fs
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-        FileSystem fs0 = newZipFileSystem(fs1Path, env);
+        var env = Map.of("create", "true");
+        FileSystem fs0 = FileSystems.newFileSystem(fs1Path, env);
 
-        final FileSystem fs2 = newZipFileSystem(fs2Path, env);
-        final FileSystem fs3 = newZipFileSystem(fs3Path, env);
+        final FileSystem fs2 = FileSystems.newFileSystem(fs2Path, env);
+        final FileSystem fs3 = FileSystems.newFileSystem(fs3Path, env);
 
         System.out.println("copy src: fs -> fs0...");
-        try (var fs = newZipFileSystem(jarFile, Map.of())) {
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of())) {
             z2zcopy(fs, fs0, "/", 0);   // copy fs -> fs1
             fs0.close();                // dump to file
 
             System.out.println("open fs0 as fs1");
-            env = new HashMap<String, Object>();
-            final FileSystem fs1 = newZipFileSystem(fs1Path, env);
+            final FileSystem fs1 = FileSystems.newFileSystem(fs1Path, Map.of());
 
             System.out.println("listing...");
             final ArrayList<String> files = new ArrayList<>();
             final ArrayList<String> dirs = new ArrayList<>();
             list(fs1.getPath("/"), files, dirs);
 
-            Thread t0 = new Thread(new Runnable() {
-                public void run() {
-                    List<String> list = new ArrayList<>(dirs);
-                    Collections.shuffle(list);
-                    for (String path : list) {
-                        try {
-                            z2zcopy(fs1, fs2, path, 0);
-                        } catch (Exception x) {
-                            x.printStackTrace();
-                        }
+            Thread t0 = new Thread(() -> {
+                List<String> list = new ArrayList<>(dirs);
+                Collections.shuffle(list);
+                for (String path : list) {
+                    try {
+                        z2zcopy(fs1, fs2, path, 0);
+                    } catch (Exception x) {
+                        x.printStackTrace();
                     }
                 }
-
             });
 
-            Thread t1 = new Thread(new Runnable() {
-                public void run() {
-                    List<String> list = new ArrayList<>(dirs);
-                    Collections.shuffle(list);
-                    for (String path : list) {
-                        try {
-                            z2zcopy(fs1, fs2, path, 1);
-                        } catch (Exception x) {
-                            x.printStackTrace();
-                        }
+            Thread t1 = new Thread(() -> {
+                List<String> list = new ArrayList<>(dirs);
+                Collections.shuffle(list);
+                for (String path : list) {
+                    try {
+                        z2zcopy(fs1, fs2, path, 1);
+                    } catch (Exception x) {
+                        x.printStackTrace();
                     }
                 }
-
             });
 
-            Thread t2 = new Thread(new Runnable() {
-                public void run() {
-                    List<String> list = new ArrayList<>(dirs);
-                    Collections.shuffle(list);
-                    for (String path : list) {
-                        try {
-                            z2zcopy(fs1, fs2, path, 2);
-                        } catch (Exception x) {
-                            x.printStackTrace();
-                        }
+            Thread t2 = new Thread(() -> {
+                List<String> list = new ArrayList<>(dirs);
+                Collections.shuffle(list);
+                for (String path : list) {
+                    try {
+                        z2zcopy(fs1, fs2, path, 2);
+                    } catch (Exception x) {
+                        x.printStackTrace();
                     }
                 }
-
             });
 
-            Thread t3 = new Thread(new Runnable() {
-                public void run() {
-                    List<String> list = new ArrayList<>(files);
-                    Collections.shuffle(list);
-                    while (!list.isEmpty()) {
-                        Iterator<String> itr = list.iterator();
-                        while (itr.hasNext()) {
-                            String path = itr.next();
-                            try {
-                                if (Files.exists(fs2.getPath(path))) {
-                                    z2zmove(fs2, fs3, path);
-                                    itr.remove();
-                                }
-                            } catch (FileAlreadyExistsException x) {
+            Thread t3 = new Thread(() -> {
+                List<String> list = new ArrayList<>(files);
+                Collections.shuffle(list);
+                while (!list.isEmpty()) {
+                    Iterator<String> itr = list.iterator();
+                    while (itr.hasNext()) {
+                        String path = itr.next();
+                        try {
+                            if (Files.exists(fs2.getPath(path))) {
+                                z2zmove(fs2, fs3, path);
                                 itr.remove();
-                            } catch (Exception x) {
-                                x.printStackTrace();
                             }
+                        } catch (FileAlreadyExistsException x) {
+                            itr.remove();
+                        } catch (Exception x) {
+                            x.printStackTrace();
                         }
                     }
                 }
-
             });
 
             System.out.println("copying/removing...");
@@ -394,7 +378,7 @@ public class ZipFSTester {
             fs3.close();
 
             System.out.println("opening: fs3 as fs4");
-            FileSystem fs4 = newZipFileSystem(fs3Path, env);
+            FileSystem fs4 = FileSystems.newFileSystem(fs3Path, Map.of());
 
 
             ArrayList<String> files2 = new ArrayList<>();
@@ -527,7 +511,7 @@ public class ZipFSTester {
                    zos.closeEntry();
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Map.of())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     Path path = zfs.getPath((String)e[0]);
                     byte[] bytes = (byte[])e[2];
@@ -537,7 +521,7 @@ public class ZipFSTester {
             Files.deleteIfExists(zpath);
 
             // [2] create zip via zfs.newByteChannel
-            try (var zfs = newZipFileSystem(zpath, Map.of("create", "true"))) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of("create", "true"))) {
                 for (Object[] e : entries) {
                     //  tbd: method is not used
                     try (var sbc = Files.newByteChannel(zfs.getPath((String)e[0]),
@@ -546,7 +530,7 @@ public class ZipFSTester {
                     }
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Map.of())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     checkRead(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
@@ -554,12 +538,12 @@ public class ZipFSTester {
             Files.deleteIfExists(zpath);
 
             // [3] create zip via Files.write()/newoutputStream/
-            try (var zfs = newZipFileSystem(zpath, Map.of("create", "true"))) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of("create", "true"))) {
                 for (Object[] e : entries) {
                     Files.write(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Map.of())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     checkRead(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
@@ -567,7 +551,7 @@ public class ZipFSTester {
             Files.deleteIfExists(zpath);
 
             // [4] create zip via zfs.newByteChannel, with "method_stored"
-            try (var zfs = newZipFileSystem(zpath,
+            try (var zfs = FileSystems.newFileSystem(zpath,
                     Map.of("create", true, "noCompression", true))) {
                 for (Object[] e : entries) {
                     try (var sbc = Files.newByteChannel(zfs.getPath((String)e[0]),
@@ -576,7 +560,7 @@ public class ZipFSTester {
                     }
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Map.of())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     checkRead(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
@@ -630,16 +614,14 @@ public class ZipFSTester {
     @Test
     void test8069211() throws Exception {
         // create a new filesystem, copy this file into it
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
         Path fsPath = getTempPath();
-        try (FileSystem fs = newZipFileSystem(fsPath, env);) {
+        try (FileSystem fs = FileSystems.newFileSystem(fsPath, Map.of("create", "true"))) {
             OutputStream out = Files.newOutputStream(fs.getPath("/foo"));
             out.write("hello".getBytes());
             out.close();
             out.close();
         }
-        try (FileSystem fs = newZipFileSystem(fsPath, new HashMap<String, Object>())) {
+        try (FileSystem fs = FileSystems.newFileSystem(fsPath, Map.of())) {
             assertArrayEquals("hello".getBytes(), Files.readAllBytes(fs.getPath("/foo")),
                     "entry close() failed");
         } catch (Exception x) {
@@ -651,26 +633,9 @@ public class ZipFSTester {
 
     @Test
     void test8131067() throws Exception {
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-
         // file name with space character for URI to quote it
-        File tmp = File.createTempFile("test zipfs", "zip");
-        tmp.delete();    // we need a clean path, no file
-        Path fsPath = tmp.toPath();
-        try (FileSystem fs = newZipFileSystem(fsPath, env);) {
-            Files.write(fs.getPath("/foo"), "hello".getBytes());
-            URI fooUri = fs.getPath("/foo").toUri();
-            assertArrayEquals("hello".getBytes(), Files.readAllBytes(Paths.get(fooUri)),
-                    "entry close() failed");
-        } finally {
-            Files.delete(fsPath);
-        }
-    }
-
-    private static FileSystem newZipFileSystem(Path path, Map<String, ?> env)
-        throws Exception
-    {
+        Path fsPath = Files.createTempFile(Path.of("."), "test zipfs", "zip");
+        Files.delete(fsPath); // we need a clean path, no file
         // Use URLDecoder (for test only) to remove the double escaped space
         // character. For the path which is not encoded by UTF-8, we need to
         // replace "+" by "%2b" manually before feeding into the decoder.
@@ -682,16 +647,23 @@ public class ZipFSTester {
         //
         // Also, we should not use URLEncoder in case of the path has been
         // encoded.
-        return FileSystems.newFileSystem(
-            new URI("jar", URLDecoder.decode(path.toUri().toString()
-                            .replace("+", "%2b"), "utf8"), null), env, null);
+        try (FileSystem fs = FileSystems.newFileSystem(new URI("jar",
+                URLDecoder.decode(fsPath.toUri().toString().replace("+", "%2b"), StandardCharsets.UTF_8),
+                null), Map.of("create", "true"))) {
+            Files.write(fs.getPath("/foo"), "hello".getBytes());
+            URI fooUri = fs.getPath("/foo").toUri();
+            assertArrayEquals("hello".getBytes(), Files.readAllBytes(Paths.get(fooUri)),
+                    "entry close() failed");
+        } finally {
+            Files.deleteIfExists(fsPath);
+        }
     }
 
-    private static Path getTempPath() throws IOException
-    {
-        File tmp = File.createTempFile("testzipfs_", "zip");
-        tmp.delete();    // we need a clean path, no file
-        return tmp.toPath();
+    private static Path getTempPath() throws IOException {
+        var path = Files.createTempFile(
+                Path.of("."), "testzipfs_", "zip");
+        Files.delete(path);
+        return path;
     }
 
     private static void list(Path path, List<String> files, List<String> dirs )
@@ -718,7 +690,7 @@ public class ZipFSTester {
         if (Files.isDirectory(srcPath)) {
             if (!Files.exists(dstPath)) {
                 try {
-                    mkdirs(dstPath);
+                    Files.createDirectories(dstPath);
                 } catch (FileAlreadyExistsException x) {}
             }
             try (DirectoryStream<Path> ds = Files.newDirectoryStream(srcPath)) {
@@ -756,7 +728,7 @@ public class ZipFSTester {
 
         if (Files.isDirectory(srcPath)) {
             if (!Files.exists(dstPath))
-                mkdirs(dstPath);
+                Files.createDirectories(dstPath);
             try (DirectoryStream<Path> ds = Files.newDirectoryStream(srcPath)) {
                 for (Path child : ds) {
                     z2zmove(src, dst,
@@ -767,7 +739,7 @@ public class ZipFSTester {
             //System.out.println("moving..." + path);
             Path parent = dstPath.getParent();
             if (parent != null && Files.notExists(parent))
-                mkdirs(parent);
+                Files.createDirectories(parent);
             Files.move(srcPath, dstPath);
         }
     }
@@ -812,18 +784,6 @@ public class ZipFSTester {
                     return FileVisitResult.CONTINUE;
                 }
         });
-    }
-
-    private static void mkdirs(Path path) throws IOException {
-        if (Files.exists(path))
-            return;
-        path = path.toAbsolutePath();
-        Path parent = path.getParent();
-        if (parent != null) {
-            if (Files.notExists(parent))
-                mkdirs(parent);
-        }
-        Files.createDirectory(path);
     }
 
     private static void rmdirs(Path path) throws IOException {
@@ -915,11 +875,8 @@ public class ZipFSTester {
 
     private static void fchCopy(Path src, Path dst) throws IOException
     {
-        Set<OpenOption> read = new HashSet<>();
-        read.add(READ);
-        Set<OpenOption> openwrite = new HashSet<>();
-        openwrite.add(CREATE_NEW);
-        openwrite.add(WRITE);
+        Set<OpenOption> read = Set.of(READ);
+        Set<OpenOption> openwrite = Set.of(CREATE_NEW, WRITE);
 
         try (FileChannel srcFc = src.getFileSystem()
                                     .provider()
@@ -939,11 +896,8 @@ public class ZipFSTester {
 
     private static void chCopy(Path src, Path dst) throws IOException
     {
-        Set<OpenOption> read = new HashSet<>();
-        read.add(READ);
-        Set<OpenOption> openwrite = new HashSet<>();
-        openwrite.add(CREATE_NEW);
-        openwrite.add(WRITE);
+        Set<OpenOption> read = Set.of(READ);
+        Set<OpenOption> openwrite = Set.of(CREATE_NEW, WRITE);
 
         try (SeekableByteChannel srcCh = Files.newByteChannel(src, read);
              SeekableByteChannel dstCh = Files.newByteChannel(dst, openwrite))
@@ -983,8 +937,7 @@ public class ZipFSTester {
         throws Exception
     {
         System.out.println("test ByteChannel...");
-        Set<OpenOption> read = new HashSet<>();
-        read.add(READ);
+        Set<OpenOption> read = Set.of(READ);
         int n = 0;
         ByteBuffer bb = null;
         ByteBuffer bb2 = null;
@@ -1027,7 +980,7 @@ public class ZipFSTester {
         Path path = fs.getPath(name);
         Path parent = path.getParent();
         if (parent != null && Files.notExists(parent))
-            mkdirs(parent);
+            Files.createDirectories(parent);
         return path;
     }
 
@@ -1039,7 +992,7 @@ public class ZipFSTester {
      */
     @Test
     void testFileStoreNullArgs() throws Exception {
-        try (var fs = newZipFileSystem(jarFile, Map.of())) {
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of())) {
             // file system containing at least one ZipFileStore
             FileStore store = fs.getFileStores().iterator().next();
 
